GridView: Fix an off-by-one offset of positioning of items

The block for finding the position for the item *before* needs to be
applied for the case where visibleItems is empty too, so we separate it
out.

Change-Id: I60a7e3a44d01a0087970e37bf4e73b94da5ebd48
Task-number: QTBUG-49218
Reviewed-by: Shawn Rutledge <shawn.rutledge@qt.io>