src/quick/items/qquickgridview.cpp
@@ -537,13 +537,12 @@ bool QQuickGridViewPrivate::addVisibleItems(qreal fillFrom, qreal fillTo, qreal 
     if (visibleItems.count()) {
         FxGridItemSG *firstItem = static_cast<FxGridItemSG*>(visibleItems.constFirst());
         rowPos = firstItem->rowPos();
-        colNum = qFloor((firstItem->colPos()+colSize()/2) / colSize());
-        if (--colNum < 0) {
-            colNum = columns - 1;
-            rowPos -= rowSize();
-        }
-    } else {
-        colNum = qFloor((colPos+colSize()/2) / colSize());
+        colPos = firstItem->colPos();
+    }
+    colNum = qFloor((colPos+colSize()/2) / colSize());
+    if (--colNum < 0) {
+        colNum = columns - 1;
+        rowPos -= rowSize();
     }
 
     // Prepend
